--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,5 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - chmod +x ./deploy.sh
-      - ./deploy.sh $CIRCLE_SHA1 $DOCKER_ORGANISATION $DOCKER_REPOSITORY_NAME $AWS_APPLICATION_NAME $AWS_ENVIRONMENT_NAME $AWS_EB_BUCKET_NAME $AWS_REGION
+      - chmod +x ./scripts/deploy.sh
+      - ./scripts/deploy.sh $CIRCLE_SHA1 $DOCKER_ORGANISATION $DOCKER_REPOSITORY_NAME $AWS_APPLICATION_NAME $AWS_ENVIRONMENT_NAME $AWS_EB_BUCKET_NAME $AWS_REGION
